--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,95 +2,63 @@
 import Section from "../layouts/Section.astro";
 import Title from "../layouts/Titles.astro";
 import Paragraph from "../layouts/Paragraph.astro";
+import { BsArrowRightCircleFill } from "react-icons/bs";
 ---
 
 <Section id="projects">
-    <Title>Projects</Title>
-    <Paragraph>
-      I've completed a couple of projects through consistent daily practice, independently tackling challenges and enhancing my skills.
-    </Paragraph>
-    <div
-      class="grid grid-cols-1 sm:grid-cols-2 gap-10 m-4"
+  <Title>Projects</Title>
+  <Paragraph>
+    I've completed a couple of projects through consistent daily practice,
+    independently tackling challenges and enhancing my skills.
+  </Paragraph>
+  <div class="grid grid-cols-1 justify-center items-center sm:grid-cols-2 gap-10 m-4">
+    <a
+      href="https://github.com/jljulioa/aws-ecr-ci-cd.git"
+      target="_blank"
+      class="inline-block"
     >
       <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+        class="max-w-xs mx-auto relative shadow-md rounded-lg cursor-pointer bg-[url('/assets/backgrounds/bg-skills.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')] bg-object-fill bg-no-repeat"
       >
-        <a href="#" class="max-w-screen py-2">
-          <img class="rounded-t-lg" src="/assets/P1.png" alt="" />
-        </a>
-        <div class="p-5">
-          <a href="#">
-            <h5
-              class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
-            >
-              Backend S3 Wallpapers
-            </h5>
-          </a>
-          <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-            Backend service for Wallpapers Management using Lambda API Gateway
-            and Serverless Framework. CI/CD GithHub Actions
+        <img
+          src="/assets/project-1.png"
+          alt="project-1"
+          class="w-full h-auto rounded-t-lg"
+        />
+        <div
+          class="bottom-0 left-0 right-0 h-40 bg-black bg-opacity-50 backdrop-blur text-white p-4 rounded-b-lg"
+        >
+          <h1 class="text-2xl font-semibold">EKS & ECR Orchestration</h1>
+          <p class="mt-2">
+            Push an Nginx image to ECR and Deploy in EKS using GitHub Action
+            (exgternal DNS, Route 53 and twilio)
           </p>
-          <a
-            href="#"
-            class="inline-flex justify-end items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-          >
-            Read more
-            <svg
-              class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 14 10"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-            </svg>
-          </a>
         </div>
       </div>
+    </a>
+    <a
+      href="https://github.com/jljulioa/gallery-app-folio-users.git"
+      target="_blank"
+      class="inline-block"
+    >
       <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+        class="max-w-xs mx-auto relative shadow-md rounded-lg cursor-pointer bg-[url('/assets/backgrounds/bg-skills.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')] bg-object-fill bg-no-repeat"
       >
-        <a href="#" class="max-w-screen py-2">
-          <img class="rounded-t-lg" src="/assets/P2.png" alt="" />
-        </a>
-        <div class="p-5">
-          <a href="#">
-            <h5
-              class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
-            >
-              EKS & ECR Orquestration
-            </h5>
-          </a>
-          <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-            Deployment an application using GitHub Actions to pull image to ECR
-            and EKS With external DNS and Route 53 integration
+        <img
+          src="/assets/project-2.png"
+          alt="project-1"
+          class="w-full h-auto rounded-t-lg"
+        />
+        <div
+          class="bottom-0 left-0 right-0 h-40 bg-black bg-opacity-50 backdrop-blur text-white p-4 rounded-b-lg"
+        >
+          <h1 class="text-2xl font-semibold">Backend S3 Wallpapers</h1>
+          <p class="mt-2">
+            Backend service for Wallpapers Management using Lambda, CloudFront,
+            S3 and Serverless Framework. CI/CD GithHub Actions
           </p>
-          <a
-            href="#"
-            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-          >
-            Read more
-            <svg
-              class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 14 10"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-            </svg>
-          </a>
         </div>
       </div>
-    </div>
+    </a>
+  </div>
 </Section>
