--- a/src/components/icons/Terraform-icon.astro
+++ b/src/components/icons/Terraform-icon.astro
@@ -1,3 +1,35 @@
-<svg 
-{...Astro.props}
-viewBox="-17.5 0 291 291" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <polygon fill="#4040B2" points="176.485057 188.994162 256.000302 143.127442 256.000302 51.2485453 176.485057 97.2122358"> </polygon> <path d="M88.2425283,51.2485453 L167.757774,97.2122358 L167.757774,188.994162 L88.2425283,143.078957 M0,91.8304113 L79.5152453,137.745617 L79.5152453,45.9152057 L0,0 M88.2425283,244.994228 L167.757774,290.909434 L167.757774,199.079023 L88.2425283,153.163817" fill="#5C4EE5"> </path> </g> </g></svg>
+<svg
+  viewBox="-29.1 -29.1 349.20 349.20"
+  {...Astro.props}
+  version="1.1"
+  xmlns="http://www.w3.org/2000/svg"
+  xmlns:xlink="http://www.w3.org/1999/xlink"
+  preserveAspectRatio="xMidYMid"
+  fill="#000000"
+  stroke="#000000"
+  stroke-width="0.0029100000000000003"
+  ><g id="SVGRepo_bgCarrier" stroke-width="0"
+    ><rect
+      x="-29.1"
+      y="-29.1"
+      width="349.20"
+      height="349.20"
+      rx="174.6"
+      fill="#ffffff"
+      ></rect></g
+  ><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
+  ></g><g id="SVGRepo_iconCarrier">
+    <g>
+      <polygon
+        fill="#4040B2"
+        points="176.485057 188.994162 256.000302 143.127442 256.000302 51.2485453 176.485057 97.2122358"
+      >
+      </polygon>
+      <path
+        d="M88.2425283,51.2485453 L167.757774,97.2122358 L167.757774,188.994162 L88.2425283,143.078957 M0,91.8304113 L79.5152453,137.745617 L79.5152453,45.9152057 L0,0 M88.2425283,244.994228 L167.757774,290.909434 L167.757774,199.079023 L88.2425283,153.163817"
+        fill="#5C4EE5"
+      >
+      </path>
+    </g>
+  </g></svg
+>
