--- a/src/pages/aboutMe.astro
+++ b/src/pages/aboutMe.astro
@@ -45,9 +45,9 @@ import Paragraph from "../layouts/Paragraph.astro";
     </Paragraph>
     <Title class="mt-20">Music I like</Title>
     <Paragraph>
-      I would like to share with you what kind of music I am listening this
-      days. I have to say that I like yo hear a wide range of rhytms, but this
-      days I am a rock guy.
+      I'd like to share with you the type of music I've been enjoying lately.
+      While I listing a diverse range of rhythms, these days I find myself
+      leaning towards rock.
     </Paragraph>
     <div class="rounded-xl ring-2 ring-white">
       <iframe
@@ -59,11 +59,5 @@ import Paragraph from "../layouts/Paragraph.astro";
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
         loading="lazy"></iframe>
     </div>
-    <Title class="mt-20">Where do I Live?</Title>
-    <Paragraph>
-      I am livig in my hometwon Valencia(Cordoba/Colombia) with my family, my dougther and my wife. Here
-      lives my parents also, I really enjoy the life here, but sometimes it gets
-      small this place
-    </Paragraph>
   </Section>
 </BaseLayout>
