--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const currentYear = new Date().getFullYear();
         </span>
         <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
             <li>
-                <a href="#" class="hover:underline me-4 md:me-6">About this Web</a>
+                <a href="/aboutWeb/" class="hover:underline me-4 md:me-6">About this Web</a>
             </li>
         </ul>
         </div>
