--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,16 +11,16 @@ import Recomendation from "../components/Recomendation.astro";
 import Projects from "../components/Projects.astro";
 import Education from "../components/Education.astro";
 import Gallery from "../components/Gallery.astro";
-import Contact from '../components/Contact.astro'
+import Contact from "../components/Contact.astro";
 ---
 
 <BaseLayout>
   <Hero />
   <Skills />
   <Projects />
-  <Gallery/>
+  <Gallery />
   <Education />
   <About />
   <Recomendation />
-  <Contact/>
+  <Contact />
 </BaseLayout>
