Revert "Amplify V8 Update"
This reverts commit 6688667a485424e96093129e77950f6f0f8462fc.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@
     class="-order-1 relative sm:order-1 grid items-center justify-center mx-4"
   >
     <img
-      src="/assets/jljulioa-drive.png"
+      src="/assets/jljulioa-animated.png"
       class="hero-image max-w-[600px] sm:w-auto w-full bg-[url('/assets/backgrounds/bg-skills.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')] bg-cover bg-center bg-no-repeat"
       alt="jljulioa"
     />
