--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -13,11 +13,9 @@ const {
 ---
 
 <meta charset="UTF-8" />
+<meta name="description" property="og:description" content={description} />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="generator" content={Astro.generator} />
 <title>{title}</title>
-<meta name="og:image" content="/assets/og.png" />
-<meta name="og:title" content={title} />
-<meta name="og:description" content={description} />
-<meta name="og:site_name" content="Porfolio @jljulioa" />
-<meta name="og:type" content="website" />
+
 <link rel="icon" type="image/svg+xml" href="/leo-favicon.svg" />
