--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -7,8 +7,7 @@ import Paragraph from "../layouts/Paragraph.astro";
 <Section id="education">
   <Title>Formal Education</Title>
   <Paragraph >
-    I have been fortunate enough to receive praise for my work in several
-    publications. Take a look below to learn more.
+    This represents the extent of my engagement with the structured education system thus far
   </Paragraph>
   <div class="flex flex-col text-left justify-center items-center pl-4">
     <ol
@@ -100,7 +99,7 @@ import Paragraph from "../layouts/Paragraph.astro";
   </div>
   <Title class="pt-20">Self Education</Title>
   <Paragraph>
-   In this sections I show what key materials I am used to lern so far, not certificated model education.
+    In this section, I outline the key materials I have utilized in my learning journey thus far, distinct from formal certificate-based education
   </Paragraph>
   <div class="flex flex-col text-left justify-center items-center pl-4">
     <ol
