Ampplify V9.1 Minor Update

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ import { BsArrowRightCircleFill } from "react-icons/bs";
 <Section id="projects">
   <Title>Projects</Title>
   <Paragraph>
-    I've completed a couple of projects through consistent daily practice,
+   Here are some Projects I've completed,
     independently tackling challenges and enhancing my skills.
   </Paragraph>
   <div class="grid grid-cols-1 justify-center items-center sm:grid-cols-2 gap-10 m-4">
