--- a/src/components/Recomendation.astro
+++ b/src/components/Recomendation.astro
@@ -4,7 +4,7 @@ import Title from "../layouts/Titles.astro";
 ---
 
 <Section id="reco">
-  <Title >Recomendation</Title>
+  <Title >Recommendation</Title>
   <div class="pt-20">
     <div
       class="w-full max-w-64 mx-auto px-3 py-4 text-gray-800 bg-white rounded-lg shadow-lg dark:bg-gray-800 dark:text-gray-50"
