--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -23,7 +23,7 @@ import Paragraph from "../layouts/Paragraph.astro";
       type="button"
       class="relative text-white text-lg md:text-2xl bg-blue-700 hover:bg-[#665fcc] dark:bg-[#665fcc] dark:hover:bg-blue-700 font-medium rounded-3xl w-auto px-5 py-2.5 text-center"
     >
-      Know Me Better?
+      Learn More About Me
       <div
         id="tooltip-about"
         role="tooltip"
