--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -26,7 +26,7 @@ const iconLinks: { label: string; icon: any }[] = [
 <Sections id="skills">
   <Title>Tech Skills</Title>
   <Paragraph>
-    These are a few skills and tools I've cultivated through daily practice,
+    These are a few skills and tools I've Developed through daily practice,
     consistently seeking optimal approaches for continuous improvement.
   </Paragraph>
   <div class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 justify-center items-center">
