--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@
   >
     <img
       src="/assets/jljulioa-drive.png"
-      class="hero-image max-w-[600px] sm:w-auto w-full bg-[url('/assets/backgrounds/bg-skills.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')] bg-cover bg-center bg-no-repeat"
+      class="hero-image aspect-square max-w-[600px] sm:w-auto w-full bg-[url('/assets/backgrounds/bg-skills.svg')] dark:bg-[url('/assets/backgrounds/bg-profile-dark.svg')] bg-cover bg-center bg-no-repeat"
       alt="jljulioa"
     />
     <h1
