--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,6 @@
 ---
 import Title from "../layouts/Titles.astro";
 import Section from "../layouts/Section.astro";
-
 import WhatsAppIcon from "./icons/WhatsApp-ico.astro";
 import GmailIcon from "./icons/Gmail-ico.astro";
 import GitHubIcon from "./icons/GitHubLogo-icon.astro";
@@ -87,7 +86,7 @@ const iconLinks: { label: string; href: string; icon: any }[] = [
       <>
   <div/>
       <a
-        href="https://drive.google.com/file/d/1l9L-pFVUgMIiCDYwoZd9ZjCs5q7-xknn/view?usp=drive_link"
+        href="https://drive.google.com/file/d/1tDyQei9JJnFSCh84V4-urjyYZB2bbISn/view?usp=sharing"
         target="_blank"
       >
         <button
