--- a/src/components/Recomendation.astro
+++ b/src/components/Recomendation.astro
@@ -17,7 +17,7 @@ import Title from "../layouts/Titles.astro";
         >
           <img
             alt="profil"
-            src="https://scontent-bog2-2.xx.fbcdn.net/v/t1.6435-1/198666325_10159645844778120_270851975132882564_n.jpg?stp=dst-jpg_p200x200&_nc_cat=109&ccb=1-7&_nc_sid=2b6aad&_nc_eui2=AeEIfkFDqI4iPsBQraCSDATvwAvE3IRzUF_AC8TchHNQXwMgua2Ye65SeUPYH4m0hWg&_nc_ohc=i8NrgDyof8UAX_lHawS&_nc_ht=scontent-bog2-2.xx&oh=00_AfB_utIHeIrhNg0yghTici_vE4D8dyo4ZOOdEb2ge09hDA&oe=66043C17"
+            src="/assets/francisco.jpeg"
             class="mx-auto object-cover rounded-full h-20 w-20"
           />
         </a>
@@ -41,7 +41,7 @@ import Title from "../layouts/Titles.astro";
         </div>
       </div>
     </div>
-    <p class="text-xl text-justify md:text-2xl pt-4">
+    <p class="text-xl md:text-2xl pt-4">
       I had the pleasure of collaborating with Jaime on an EKS project, and it
       was a remarkable experience. His profound knowledge of AWS, especially in
       EKS, is truly praiseworthy. Jaime not only showcased strong technical
